syntax = "proto3";

package iscsiagent;

// The iscsi agent service definition.
service IscsiAgent {
  // Define a host on storage side.
  rpc Login (LoginRequest) returns (LoginReply) {}
  rpc Logout (LogoutRequest) returns (LogoutReply) {}
}

message LoginRequest {
  repeated string targets = 1;
}

message LoginReply {
  // Intentionally empty.
}

message LogoutRequest {
  repeated string targets = 1;
}

message LogoutReply {
  // Intentionally empty.
}
